<resources>
    <string name="app_name">AgriMart Bán hàng</string>
    <string name="slogan">An toàn - Uy tín - Chất lượng</string>
    <string name="fullNameApp">Hệ thống phân phối nông sản</string>
    <string name="fullNameAppV2">Bán hàng với AgriMart</string>
    <string name="appName"><font color='#ff8800'>Agri</font><font color='#3BD98C'>Mart</font></string>
    <string name="menu_Home">Trang chủ</string>
    <string name="menu_Product">Sản phẩm</string>
    <string name="menu_Warehouse">Kho hàng</string>
    <string name="menu_Sale">Bán hàng</string>
    <string name="menu_Profile">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_in">Đăng nhập</string>
    <string name="new_customer_create_account">Bạn mới biết đến AgriMart? <font color='#008CFF'>Đăng ký</font></string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="agrimart_2024">2024 AgriMart. Tất cả các quyền được bảo lưu</string>
    <string name="password_assistance">Đặt lại mật khẩu</string>
    <string name="enter_email_address_associated_with_account">Nhập địa chỉ email liên kết với tài khoản của bạn.</string>
    <string name="email_address">Email Address</string>
    <string name="btn_continue">Continue</string>
    <string name="authentication_required">Nhập mã xác thực</string>
    <string name="description_2">Chúng tôi đã gửi mã từ <b>AgriMart</b> tới email của bạn. Vui lòng nhập mã xác thực bên dưới.</string>
    <string name="hint_otp">Nhập mã OTP</string>
    <string name="hint_counter">60</string>
    <string name="resend_otp">Gửi lại OTP</string>
    <string name="you_hav_exceeded_number_of_requests">Bạn đã vượt quá số lượng yêu cầu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="retype_new_password">Nhập lại mật khẩu mới</string>
    <string name="save_changes">Đổi mật khẩu</string>
    <string name="cancel">Hủy</string>
    <string name="using_strong_password">Sử dụng mật khẩu mạnh ít nhất 8 ký tự</string>
    <string name="sign_up">Đăng ký bán hàng</string>
    <string name="fullNameUser">Tên liên lạc *</string>
    <string name="emailUser">Email *</string>
    <string name="password">Mật khẩu</string>
    <string name="eight_characters">Mật khẩu phải có tối thiểu 8 ký tự</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="already_have_account">Đăng nhập. <font color='#008CFF'>Đã có tài khoản?</font></string>
    <string name="find_product">Tìm kiếm sản phẩm</string>
    <string name="flash_sale"><font color="#ffff8800">FLASH SALE</font></string>
    <string name="see_all">Xem tất cả</string>
    <string name="ocop_product">Sản phẩm <font color="#FF0000">O</font><font color="#008000">C</font><font color="#0000FF">O</font><font color="#FFD700">P</font></string>
    <string name="specialty_products">Đặc sản vùng miền</string>
    <string name="today_suggestion">Gợi ý hôm nay</string>
    <string name="recent_product">Sản phẩm gần đây</string>
    <string name="what_is_product_look_for">Nhập tên sản phẩm cần tìm</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="clear_all">Xoá tất cả</string>
    <string name="schedule">schedule</string>
    <string name="vegetable">Rau củ</string>
    <string name="category_image">Category Image</string>
    <string name="product_image">Product Image</string>
    <string name="product_price">50.000 VNĐ</string>
    <string name="share_product">Share Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="title_demo">Táo - Chanh - Dứa - Kiwi</string>
    <string name="rating_star">Rating Star</string>
    <string name="have_sold">Đã bán</string>
    <string name="favourite_product">Favourite Product</string>
    <string name="hn">Hà Nội</string>
    <string name="htx_demo">HTX Demo</string>
    <string name="xem_shop">Xem Shop</string>
    <string name="add">Thêm vào giỏ</string>
    <string name="buy_now">Mua ngay</string>
    <string name="review">Đánh giá</string>
    <string name="be_first_review">Sản phẩm chưa có đánh giá nào</string>
    <string name="write_review">Viết đánh giá</string>
    <string name="_4_5">4.5</string>
    <string name="_200_review">200 Đánh giá</string>
    <string name="_5">5</string>
    <string name="_100">100</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="infor_product">Thông tin sản phẩm</string>
    <string name="infor_product_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien diam, pharetra eu nisi eu, mollis commodo diam. In efficitur augue mollis maximus accumsan. Sed eros risus, mollis sit amet risus vitae, feugiat cursus lectus. Donec sed metus eu odio eleifend viverra id sit amet metus. Praesent quis facilisis felis. Sed tempus augue ut velit finibus tempus. Maecenas sapien lorem, pellentesque vel convallis ut, condimentum tincidunt turpis. Pellentesque iaculis tempor laoreet. Curabitur vel lacus facilisis, auctor lacus non, commodo nulla. Nam eget libero est. Aenean laoreet nunc non dolor tristique convallis. Morbi pellentesque risus non molestie tempor. Vestibulum quis turpis varius, vulputate dolor vel, ullamcorper mauris. Vivamus sed pharetra lacus. Suspendisse potenti.\n\nNulla vel lacus id libero porta varius et sit amet nisl. Nullam consectetur vitae odio vel viverra. Integer tellus lectus, congue vitae enim non, accumsan lobortis neque. Morbi at auctor nisi. Integer dignissim massa id nulla congue, a placerat diam dignissim. Vivamus quis nulla eget nibh malesuada pulvinar eu eu sem. Maecenas ut tristique metus, et iaculis neque. Etiam malesuada orci vitae turpis dapibus, et congue lectus interdum.\n\nNulla sollicitudin lorem eget sapien facilisis elementum. In eget faucibus nulla. Donec feugiat risus eu sem facilisis maximus. Donec iaculis justo vitae lectus aliquam gravida. In felis tortor, aliquet et dapibus eu, dictum vel orci. Vivamus ultricies nibh a molestie gravida. Integer ac pellentesque massa, non ornare quam. Praesent ut ante porttitor, semper enim congue, euismod justo. Quisque convallis gravida tempus. Sed et tincidunt lorem, nec feugiat nunc. Nunc non quam non ipsum consectetur euismod vel et erat. Cras lobortis arcu at dignissim aliquam. Nunc sit amet tempor nunc, sit amet fermentum magna. Morbi fringilla lacus mauris, non viverra arcu cursus vel. Sed euismod interdum enim et pharetra. Quisque suscipit, sapien non malesuada ornare, mauris purus efficitur sapien, in lacinia augue massa id magna.</string>
    <string name="see_more">Xem thêm</string>
    <string name="setting">Cài đặt</string>
    <string name="edit_personal_info">Cập nhật thông tin cá nhân</string>
    <string name="admin">Người dùng</string>
    <string name="order">Đơn hàng hôm nay</string>
    <string name="all_orders">Tất cả đơn hàng</string>
    <string name="wishlist">Sản phẩm yêu thích</string>
    <string name="notification">Thông báo</string>
    <string name="agrimart_v1_0">AgriMart v1.0</string>
    <string name="Logout">Đăng xuất</string>
    <string name="others">Khác</string>
    <string name="location">Địa chỉ nhận hàng</string>
    <string name="billing">Thanh toán</string>
    <string name="write_your_feedback">Viết nội dung đánh giá</string>
    <string name="_200">200</string>
    <string name="submit">Gửi</string>
    <string name="cart">Giỏ hàng</string>
    <string name="_5_000_000">5.000.000</string>
    <string name="type_product">Táo xanh chưa chín</string>
    <string name="total">Tổng tiền</string>
    <string name="check_out">Xác nhận</string>
    <string name="cart_is_empty">Giỏ hàng của bạn đang trống!</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="choose_payment_method">Chọn phương thức thanh toán</string>
    <string name="shipping_address">Địa chỉ nhận hàng</string>
    <string name="home">Nhà</string>
    <string name="place_order">Đặt hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="address_location">Tên đường, Tòa nhà, Số nhà</string>
    <string name="save">Lưu</string>
    <string name="delete">Xóa</string>
    <string name="street">Thôn, Phường/Xã</string>
    <string name="full_name">Họ và tên</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="province">Quận/Huyện</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="contact">Liên hệ</string>
    <string name="forgot_change_password">Thay đổi mật khẩu</string>
    <string name="no_order">Không có đơn hàng nào!</string>
    <string name="product">Sản phẩm</string>
    <string name="your_wishlist_is_empty">Danh sách đang trống</string>
    <string name="an_empty_wishlist_does_not_look_good">Hãy thêm sản phẩm nào đó ^^</string>
    <string name="specialty">Đặc sản vùng miền</string>
    <string name="standard">Nông sản đạt chuẩn</string>
    <string name="_4_5_5_0">4.5/5.0</string>
    <string name="reviews">Đánh giá</string>
    <string name="had_joined">Đã tham gia</string>
    <string name="shop_description">Mô tả Shop</string>
    <string name="account_have_accept">Tài khoản đã được xác minh:</string>
    <string name="doanh_so">Doanh số</string>
    <string name="_02_2024">02/2024</string>
    <string name="total_product">Số sản phẩm đã bán</string>
    <string name="havent_orders">Chưa có đơn hàng nào</string>
    <string name="recentOrder">Đơn hàng gần đây</string>
    <string name="havent_recent_order">Chưa có đơn hàng nào gần đây</string>
    <string name="sum">Tổng</string>
    <string name="status">Trạng thái</string>
    <string name="client">Khách hàng</string>
    <string name="stt">ID</string>
    <string name="recent_review">Những đánh giá gần đây</string>
    <string name="rating">Xếp hạng</string>
    <string name="info">Thông tin</string>
    <string name="intro_about_shop">Giới thiệu về Shop</string>
    <string name="history_order">Lịch sử đơn hàng</string>
    <string name="history_review">Lịch sử đánh giá</string>
    <string name="finding">Tìm kiếm</string>
    <string name="code">Mã</string>
    <string name="info_order">Thông tin đơn</string>
    <string name="havent_review">Chưa có đánh giá nào gần đây</string>
    <string name="addv2">Thêm</string>
    <string name="info_warehouse">Thông tin điểm lấy</string>
    <string name="no_warehouse">Chưa có điểm lấy hàng nào!</string>
    <string name="nameOfWarehouse">Tên điểm lấy hàng *</string>
    <string name="person">Người liên hệ *</string>
    <string name="phone">Số điện thoại *</string>
    <string name="email">Địa chỉ email *</string>
    <string name="provinceCity">Tỉnh/Thành *</string>
    <string name="back">Quay lại</string>
    <string name="type_saler">Kiểu người bán *</string>
    <string name="number_bank_account">Số tài khoản *</string>
    <string name="account_owner">Chủ tài khoản *</string>
    <string name="bank">Ngân hàng *</string>
    <string name="branch">Chi nhánh *</string>
    <string name="agreeWithPolicy">Tôi đồng ý với <font color="#ffff8800">Chính sách bảo mật</font></string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="update">Cập nhật</string>
    <string name="land_area">Diện tích vườn:</string>
    <string name="basic_info">Thông tin cơ bản</string>
    <string name="current_crop">Mùa vụ hiện tại</string>
    <string name="crops_type">Loại cây trồng</string>
    <string name="current_crops">Cây đang trồng</string>
    <string name="complete">Hoàn thành</string>
    <string name="complete_season">Khi vụ mùa kết thúc, hãy chọn Hoàn thành</string>
</resources>