<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/menu_Home" />
    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/leaf_selector"
        android:title="@string/menu_Product" />
    <item
        android:id="@+id/warehouseFragment"
        android:icon="@drawable/warehouse_selector"
        android:title="@string/menu_Warehouse" />
    <item
        android:id="@+id/saleFragment"
        android:icon="@drawable/sale_selector"
        android:title="@string/menu_Sale" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_selector"
        android:title="@string/menu_Profile" />
</menu>