<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.loginRegister.AuthenticationActivity">

    <TextView
        android:id="@+id/agrimart"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/appName"
        app:layout_constraintBottom_toTopOf="@+id/fullnameApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullnameApp"
        style="@style/h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen10dp"
        android:text="@string/fullNameApp"
        app:layout_constraintBottom_toTopOf="@id/image_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agrimart" />

    <ImageView
        android:id="@+id/image_verify"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen200dp"
        android:importantForAccessibility="no"
        android:src="@drawable/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullnameApp" />

    <TextView
        android:id="@+id/authenticationRequired"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10dp"
        android:gravity="start"
        android:text="@string/authentication_required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_verify" />

    <TextView
        android:id="@+id/authentication"
        style="@style/h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen10dp"
        android:gravity="start"
        android:text="@string/description_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticationRequired" />

    <EditText
        android:id="@+id/otpCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen30dp"
        android:layout_marginRight="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:background="@drawable/custom_border"
        android:hint="@string/hint_otp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="@dimen/dimen10dp"
        android:paddingEnd="@dimen/dimen10dp"
        android:singleLine="true"
        android:textColorHint="@color/vDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentication" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/h3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:background="@color/yellow"
        android:text="@string/btn_continue"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpCode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reSend"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp"
        android:layout_marginBottom="@dimen/dimen10dp"
        android:text="@string/resend_otp"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />

    <TextView
        android:id="@+id/countDownTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20dp"
        android:layout_marginEnd="@dimen/dimen10dp"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:hint="@string/hint_counter"
        android:paddingStart="@dimen/dimen10dp"
        android:paddingEnd="@dimen/dimen10dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toEndOf="@+id/reSend"
        app:layout_constraintTop_toBottomOf="@id/btnContinue" />

    <TextView
        android:id="@+id/numberOfClicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_hav_exceeded_number_of_requests"
        android:textColor="@color/darkGreen"
        android:textSize="@dimen/dimen16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reSend" />

</androidx.constraintlayout.widget.ConstraintLayout>